--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-lazyload": "^3.2.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-multi-carousel": "^2.8.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "styled-components": "^5.3.8",
